fix horizontal overflow caused on mobile caused by image in cta.jsx

--- a/src/style/components/_cta.scss
+++ b/src/style/components/_cta.scss
@@ -60,6 +60,7 @@
             justify-content: center;
 
             img {
+                width: 100%;
                 max-width: 481px;
 
                 &:nth-of-type(2) {
